<resources>
    <string name="app_name">TravelCalculator</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="text_tripname">Trip Name</string>
    <string name="text_travelcountry">Travel Country</string>
    <string name="text_travelcountry_tax">Travel Country Tax %</string>
    <string name="text_breakfast_tip">Breakfast Tips %</string>
    <string name="text_lunch_tip">Lunch Tips %</string>
    <string name="text_dinner_tip">Dinner Tips %</string>
    <string name="text_breakfast">Breakfast</string>
    <string name="text_lunch">Lunch</string>
    <string name="text_dinner">Dinner</string>
    <string name="text_custom_tip_percent">Custom Tips %</string>
    <string name="text_expensename">Expense Name</string>
    <string name="currency">0.00</string>
    <string name="date_title">Date</string>
    <string name="trip_title">Trip</string>
    <string name="desc_title">Description</string>
    <string name="text_RealtimeUpdateCurrency">Realtime Update Currency</string>
    <string name="fetchDataFail">Fetch Data Fail</string>
    <string name="updateDataFail">Update Data Fail</string>
    <string name="updateInfo">On: the currency is updated only while using wifi.\n\nOff: the currency is updated whenever there is a connection.</string>
    <string name="notice_FillupFields">Please fill up all fields</string>
    <string name="backWithoutSave_NoticeContent">Are you sure to give up this edit?</string>
    <string name="backWithoutSave_NoticeTitle">Leaving Without Save</string>
    <string name="toolBarTitle_tripInfoEdit">Trip Information</string>
    <string name="toolBarTitle_tripList">Trip List</string>
    <string name="notice_deleteTripConfirm">Are you sure you want to delete this trip?</string>
    <string name="notice_deleteConfirmTitle">Delete Confirm</string>
    <string name="notice_saveSuccessTitle">Save Success</string>
    <string name="notice_saveSuccessContent">This trip is successfully saved in database</string>
    <string name="deleteSuccess">Delete Successfully</string>
    <string name="toolBarTitle_expenseRecordEdit">Expense Record</string>
    <string name="toolBarTitle_expenseList">Expense Record List</string>
    <string name="notice_expenseSaveSuccessContent">This expense is successfully saved in database</string>
    <string name="cite_the_api_resource">The currency api provided by European Central Bank</string>
    <string name="notice_deleteExpenseConfirm">Are you sure you want to delete this expense?</string>


</resources>
